--- a/src/assets/css/Composants/_inputs.scss
+++ b/src/assets/css/Composants/_inputs.scss
@@ -4,6 +4,11 @@
     border-bottom: 2px solid hsl(210deg, 16%, 87%);
     padding: 10px 40px 10px 10px;
 
+    @if($type == "textarea"){
+        margin-top: 10px;
+        padding: 0px 10px 10px 10px;
+    }
+
     resize: none;
     width:100%;
     height:100%;
@@ -14,7 +19,10 @@
     }
 
     &:focus ~ .floating-label__options{
-        display:block;
+        overflow:hidden auto;
+        height:fit-content;
+        max-height:136px;
+        min-height:34px;
     }
 
     &:focus ~ label, &:valid ~ label{
@@ -69,9 +77,11 @@
 
     &__options{
         position:absolute;
-        display:none;
+        height: 0px;
+        overflow:hidden;
+        transition: 0.1s ease-in-out 0.1s;
         background-color:rgb(240, 240, 240);
-        border-radius: 0px 0px 10px 10px;
+        //border-radius: 0px 0px 10px 10px;
         width:100%;
         z-index:1;
 
