--- a/src/assets/css/Composants/_inputs.scss
+++ b/src/assets/css/Composants/_inputs.scss
@@ -73,6 +73,7 @@
         transform: translateX(-30px) translateY(-50%);
         width:20px;
         filter: invert(70%) sepia(49%) saturate(0%) hue-rotate(0deg) brightness(95%) contrast(106%);
+        cursor: pointer;
     }
 
     &__options{
