Modification function + ajout suppression text

--- a/src/assets/css/Composants/_inputs.scss
+++ b/src/assets/css/Composants/_inputs.scss
@@ -84,6 +84,7 @@
         border:none;
         transition: 0.1s ease-in-out 0.1s;
         background-color:darken(#ffffff,2%);
+        border: 0px solid darken(#ffffff,10%);
         //border-radius: 0px 0px 10px 10px;
         width:100%;
         z-index:1;
