--- a/src/assets/css/Utils/_variables.scss
+++ b/src/assets/css/Utils/_variables.scss
@@ -10,3 +10,7 @@ $main-text-color:#2c3e50;
 $small-input: 190px;
 $medium-input : 380px;
 $large-input: 820px;
+
+
+$text-main : #bbbbbb;
+$text-background: #F1F1F1;
