Modification du style

--- a/src/assets/css/Composants/_inputs.scss
+++ b/src/assets/css/Composants/_inputs.scss
@@ -73,8 +73,8 @@
         background-color:transparent;
         border: none;
 
-        top: 50%;
-        transform: translateX(-30px) translateY(-50%);
+        top: 6px;
+        transform: translateX(-30px);
         
         & img {
             width:20px;
